# atlas-shell

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  SETUP_RELEASES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
data/: gen_seed.js  gen_ts.js
docs/screenshots/: PLACE_SCREENSHOTS_HERE.txt
src/: App.tsx  index.css  themes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
