[package]
name = "atlas-tauri"
version = "0.1.6"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.4.2", features = ["api-all"] }
ssh2 = "0.9"
once_cell = "1.17"
uuid = { version = "1.1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
keyring = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.4.2", features = [] }
